# pistachio

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  test.yml
backend/: Dockerfile  Makefile  boot.sh  gunicorn.conf.py  pyproject.toml
backend/pistachio/: __init__.py  app.py  config.py  settings.py
backend/pistachio/entrypoints/: auth.py  post.py
backend/pistachio/models/: __init__.py  post.py  user.py
backend/tests/: conftest.py  test_api.py  test_db.py
docs/: ER-diagram.puml
frontend/: .env  package.json
frontend/src/components/: Home.jsx  Login.jsx
infra/: backend.yml  deploy.yml  issuer.yml
pistachio/: __init__.py  decorators.py  extensions.py  settings.py  utils.py
pistachio/adapters/: orm.py  query.py
pistachio/entrypoints/: auth.py  post.py
pistachio/models/: __init__.py
pistachio/services/: auth.py  chat_pdf.py  post.py  s3.py  schema.py  session_manager.py
tests/: conftest.py  test_db.py
tests/e2e/: test_api.py
tests/integration/: test_query.py  test_session_manager.py
tests/unit/: test_service.py
