[project]
name = "pistachio"
version = "0.1.0"
description = ""
authors = [
    {name = "iamgodot", email = "xugodot@gmail.com"},
]
dependencies = [
    "flask>=2.2.3",
    "gunicorn>=20.1.0",
    "python-dotenv>=1.0.0",
    "gevent>=22.10.2",
    "pyjwt>=2.6.0",
    "requests>=2.29.0",
    "pydantic>=1.10.7",
    "mysqlclient>=2.1.1",
    "passlib[bcrypt]>=1.7.4",
    "sqlalchemy>=2.0.15",
    "apifairy>=1.3.0",
    "flask-marshmallow>=0.15.0",
    "boto3>=1.28.32",
    "pydantic-settings>=2.0.3",
]
requires-python = ">=3.8"
license = {text = "MIT"}

[tool.pyright]
extraPaths = ["__pypackages__/3.11/lib/"]

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.3.1",
    "pytest-mock>=3.10.0",
    "jupyterlab>=4.0.5",
    "black>=23.7.0",
    "ruff>=0.0.285",
]

[tool.setuptools]
packages = ["pistachio"]

[tool.pytest.ini_options]
log_cli = true
log_level = 10
filterwarnings = ["ignore::DeprecationWarning:passlib"]

[tool.black]
line-length = 88
include = '\.pyi?$'

[tool.ruff]
select = ["E", "F", "I"]
exclude = [".git", ".tox", "venv", "build", "__pypackages__"]
line-length = 88
src = ["pistachio", "tests"]

[tool.ruff.isort]
known-first-party = ["pistachio"]
